Adjusted nav positioning

--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
 
 			<div class="nav">
 
-				<a class="about">About</a>
+				<div class="nav-group">	
+					<a class="about">About</a>
 				
-				<a class="portfolio">Portfolio</a>
+					<a class="portfolio">Portfolio</a>
 
-				<a class="contact">Contact</a>
+					<a class="contact">Contact</a>
+				</div>
 				
 			</div>	
 
