--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 			<div class="nav">
 
 				<div class="nav-group">	
-					<a class="about">About</a>
+					<a class="about" href="index.html">About</a>
 				
-					<a class="portfolio">Portfolio</a>
+					<a class="portfolio" href="portfolio.html">Portfolio</a>
 
-					<a class="contact">Contact</a>
+					<a class="contact" href="contact.html">Contact</a>
 				</div>
 				
 			</div>	
