Added background and changed margin settings

--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
 
 			</div>
 
-			
+			<div class="push"></div>
 
 		</div>
 
-		<div class="footer">
+		<footer class="footer">
 				
 				<p>Copyright © 2017 James Markotic</p>
 
-			</div>
+		</footer>
 
 	</body>
 
