--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
 
 		<div class="content">
 			
-			<!--<img class="derp" src="assets/images/spiration-light.png">-->
+			
 
 			<div class="main-section">
 				
@@ -48,22 +48,27 @@
 			
 					<div class="hangman">
 						<img src="assets/images/275x200.png" alt="placeholder">
+						<h3 class="image-name">Hangman</h>
 					</div>
 
 					<div class="rpg-game">
 						<img src="assets/images/275x200.png" alt="placeholder">
+						<h3 class="image-name">RPG</h>
 					</div>
 
 					<div class="trivia">
 						<img src="assets/images/275x200.png" alt="placeholder">
+						<h3 class="image-name">Trivia Game</h>
 					</div>
 
 					<div class="rutgers">
 						<img src="assets/images/275x200.png" alt="placeholder">
+						<h3 class="image-name">Rutgers info Widget</h>
 					</div>
 
 					<div class="rock-paper">
 						<img src="assets/images/275x200.png" alt="placeholder">
+						<h3 class="image-name">Rock Paper Scissors</h>
 					</div>
 
 						
